
Added
    Control history duration on homepage
    Snapshot scheduling
    Filter events table by user & event name on frontend
    Support new network metric keys (#433)
    Show instant cloud-init-output.log results when deploying cloud-config
    Add setting options to create VM (#419)
    View instance proxy device on instance view (#443)
    Add instance proxy device on instance view (#443)
    Pretty frontend urls (#179)
    User can change project analytics duration shown
    Filtering project analytics by host & those without any usage

Changed
    Use correct width for terminal on init
    Resize terminal on window resize
    Upgrade to bootstrap 5
    Remove operations from sidebar that are complete / failed older than 5 minutes (#407)
    Only admins can create projects (#429)
    Improve user parameter display on instance events
    Improve the following modal UI / UX;
        - create project
        - create container
        - create VM
        - create network
        - create profile
        - create storage pool
    Support limits when creating a project (#434)
    Show packets_dropped_outbound & packets_dropped_inbound on networks overview
    Support project limits on projects frontend
    Don't require filling out image when deploying cloud-config
    Support choosing project when deploying cloud-config
    Only allow choosing one host when deploying cloud-config (only on frontend)
    Add cloud & desktop icons to image lists to indicate different variants
    Improve search remote image server result layout
    Use date ranges instead of created dates for project analytics
    Apply user.user-data as instance config on 1 off cloud-config deploy

Fixed
    First run doesn't toggle passwords properly (#390)
    Cant override users current project with HTTP header in "Universe"
    Cant create directory storage pool
    Cant use shells other than bash
    Instance names are sometimes invalid when deploying deployment (#379)