@@ -4,23 +4,20 @@ namespace dhope0000\LXDClient\Tools\Hosts;
 
 use dhope0000\LXDClient\Tools\Clusters\GetAllClusters;
 use dhope0000\LXDClient\Model\Hosts\HostList;
-use dhope0000\LXDClient\Tools\Hosts\GetResources;
 
 class GetClustersAndStandaloneHosts
 {
     public function __construct(
         GetAllClusters $getAllClusters,
-        HostList $hostList,
-        GetResources  $getResources
+        HostList $hostList
     ) {
         $this->getAllClusters = $getAllClusters;
         $this->hostList = $hostList;
-        $this->getResources = $getResources;
     }
-    //TODO $removeResources should default to true but quicker at time of wrting
-    public function get($removeResources = false)
+
+    public function get()
     {
-        $clusters = $this->getAllClusters->get($removeResources);
+        $clusters = $this->getAllClusters->get();
 
         $hostsInClusterGroups = [];
 
@@ -34,18 +31,6 @@ class GetClustersAndStandaloneHosts
             $standaloneHosts = $this->hostList->fetchAllHosts();
         } else {
             $standaloneHosts = $this->hostList->fetchHostsNotInList($hostsInClusterGroups);
-        }
-
-
-        foreach ($standaloneHosts as $index => $host) {
-            $standaloneHosts[$index]->setCustomProp("resources", []);
-
-            if (!$host->hostOnline()) {
-                continue;
-            }
-
-            $info = $this->getResources->getHostExtended($host);
-            $standaloneHosts[$index]->setCustomProp("resources", $info);
         }
 
         $standaloneHosts = [
