@@ -25,7 +25,7 @@ class GetAllProfiles
      */
     public function getAllProfiles(bool $profileRecursion = false)
     {
-        $clustersAndHosts = $this->getClustersAndStandaloneHosts->get(true);
+        $clustersAndHosts = $this->getClustersAndStandaloneHosts->get();
 
         foreach ($clustersAndHosts["clusters"] as $clusterIndex => $cluster) {
             foreach ($cluster["members"] as $hostIndex => &$host) {
